// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dbHelper should correctly assemble derived key addition query 1`] = `
Object {
  "text": "INSERT INTO Keys (encryptedWif, path, entropySource, keyType) VALUES (?, ?, ?, ?)",
  "values": Array [
    "mockWif",
    "m/73'/0'/0",
    "mockEncryptedWif",
    "ECDSA secp256k1",
  ],
}
`;

exports[`dbHelper should correctly assemble master key addition query 1`] = `
Object {
  "text": "INSERT INTO MasterKeys (encryptedEntropy, timestamp) VALUES (?, ?)",
  "values": Array [
    "mockEntropy",
    946681200000,
  ],
}
`;

exports[`dbHelper should correctly assemble persona addition query 1`] = `
Object {
  "text": "INSERT INTO Personas (did, controllingKey) VALUES (?, ?)",
  "values": Array [
    "mockDid",
    "mockEncryptedWif",
  ],
}
`;

exports[`dbHelper should correctly assemble table creation query 1`] = `
Object {
  "text": "CREATE TABLE IF NOT EXISTS Personas (did VARCHAR(20) NOT NULL PRIMARY KEY, FOREIGN KEY(controllingKey) REFERENCES Keys(id) )",
}
`;

exports[`dbHelper should correctly assemble table creation query 2`] = `
Object {
  "text": "CREATE TABLE IF NOT EXISTS Keys (id INTEGER PRIMARY KEY NOT NULL UNIQUE, FOREIGN KEY(entropySource) REFERENCES MasterKeys(id) )",
}
`;
